Fixing some gross spacing stuff, and a bunch of changes from last night?

--- a/src/css/channels.css
+++ b/src/css/channels.css
@@ -15,10 +15,19 @@
 .current-channel {
 
   background-color: rgba(255,255,255,.1);
-  padding: 20px;
+  padding: 15px;
   border-bottom: 3px solid #000;
 
 }
+.current-channel img {
+  float: left;
+  margin-right: 15px;
+}
+
+.current-channel h3 {
+  margin: 0;
+}
+
 
 
 
