--- a/src/css/index.css
+++ b/src/css/index.css
@@ -26,3 +26,7 @@ canvas {
   float: left;
 }
 
+.clearfix {
+  clear: both;
+}
+
