--- a/src/css/song-list.css
+++ b/src/css/song-list.css
@@ -1,9 +1,9 @@
 
 
-.channel-list {
-  max-height: 80vh;
-  overflow-y: scroll;
+.song-list {
+  background-color: rgba(0,0,0,.1);
 }
+
 
 .song-list ul, .song-list li {
   margin: 0;
@@ -12,16 +12,26 @@
 }
 
 
-
+.song.heading {
+  font-weight: bold;
+}
 
 .song {
   height: 80px;
+  box-sizing: border-box;
+  border-bottom: 1px solid rgba(0,0,0,.4);
 
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 10px;
-  grid-auto-rows: minmax(100px, auto);
 
-  border-bottom: 1px solid #000;
+  display: flex;
+
+  align-items: center;
+  justify-content: space-between;
+
 }
+
+.song span {
+  flex: 1;
+  padding-left: 10px;
+}
+
 
